[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Sprites/pause-purple.png" type="Texture" id=4]
[ext_resource path="res://Sprites/reset-purple.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Chivo-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/popup.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 4
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 4
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 67
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 4
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 288, 512 )
texture = ExtResource( 1 )

[node name="Grid" type="Node2D" parent="." groups=["grid"]]
script = ExtResource( 2 )

[node name="Pause" type="Button" parent="."]
margin_left = 443.0
margin_top = 13.0
margin_right = 625.0
margin_bottom = 115.0
focus_mode = 0
enabled_focus_mode = 0
keep_pressed_outside = true
icon = ExtResource( 4 )
flat = true

[node name="Replay" type="Button" parent="."]
margin_left = 387.0
margin_top = 124.0
margin_right = 459.0
margin_bottom = 175.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
keep_pressed_outside = true
icon = ExtResource( 5 )
flat = true

[node name="Control" type="Control" parent="."]
visible = false
margin_left = -8.0
margin_right = 272.0
margin_bottom = 400.0

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 294, 502 )
scale = Vector2( 1.225, 1 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Control"]
margin_left = 142.0
margin_top = 335.0
margin_right = 452.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="Restart" type="Button" parent="Control"]
margin_left = 223.0
margin_top = 469.0
margin_right = 376.0
margin_bottom = 523.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Restart"
flat = true

[node name="Menu" type="Button" parent="Control"]
margin_left = 236.0
margin_top = 562.0
margin_right = 361.0
margin_bottom = 616.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Menu"
flat = true

[node name="Control2" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Control2"]
position = Vector2( 287, 532 )
scale = Vector2( 1.29643, 1.14125 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Control2"]
margin_left = 185.0
margin_top = 345.0
margin_right = 399.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 4 )
text = "PAUSE"

[node name="Menu" type="Button" parent="Control2"]
margin_left = 233.0
margin_top = 633.0
margin_right = 358.0
margin_bottom = 687.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Menu"
flat = true

[node name="Restart" type="Button" parent="Control2"]
margin_left = 218.0
margin_top = 551.0
margin_right = 371.0
margin_bottom = 605.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Restart"
flat = true

[node name="Return" type="Button" parent="Control2"]
margin_left = 128.0
margin_top = 467.0
margin_right = 455.0
margin_bottom = 521.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Continue Playing"
flat = true

[connection signal="tree_exited" from="." to="." method="_on_Game_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_Game_tree_exiting"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="Control/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Control2/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Control2/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control2/Return" to="." method="_on_Return_pressed"]
